# sgui

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
contrib/stb_image/: CMakeLists.txt
sgui/: CMakeLists.txt
sgui/include/: macro.h
sgui/include/graphics/: buffers.h  shaders.h  texture.h  viewport.h
sgui/include/gui/: application.h  codes.h  object.h  text.h  widget.h  window.h
sgui/include/math/: mat.h  numerics.h  vec.h
sgui/include/utils/: context_lock.h  error.h
sgui/src/: application.cpp  error.cpp  help.cpp  help.h  object.cpp  shaders.cpp  text.cpp  texture.cpp  widget.cpp  window.cpp
stb_image/: stb_image.h
testing/work/: CMakeLists.txt  main.cpp
